--- a/notes_project/notes/templates/base_generic.html
+++ b/notes_project/notes/templates/base_generic.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Django App{% endblock %}</title>
-    <!-- Add your CSS links, meta tags, or other head content here -->
+    <title>{% block title %}Notes App{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/dark_theme.css' %}">
 </head>
 <body>
 
