--- a/notes_project/notes/templates/notes/edit_note.html
+++ b/notes_project/notes/templates/notes/edit_note.html
@@ -5,7 +5,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Save</button>
+    <button type="submit" class="button">Save</button>
+    <a href="{% url 'note_list' %}" class="button">Cancel</a>
   </form>
-  <a href="{% url 'note_list' %}">Cancel</a>
 {% endblock %}
