--- a/notes_project/notes/templates/base_generic.html
+++ b/notes_project/notes/templates/base_generic.html
@@ -1,3 +1,4 @@
+<!-- Loading the static files -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -5,18 +6,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Setting the title of the page to "Notes App" -->
     <title>{% block title %}Notes App{% endblock %}</title>
+    <!-- Including the CSS file -->
+</head>
     <link rel="stylesheet" href="{% static 'css/dark_theme.css' %}">
 </head>
 <body>
-
     <div id="content">
+        <!-- Defining a block for the main content of the page -->
         {% block content %}
-            <!-- Content of the child template will go here -->
         {% endblock %}
     </div>
-
-    <!-- Add your footer content or scripts here -->
-
 </body>
 </html>
